<resources>
    <string name="app_name">WebSMS Connector: Developergarden</string>
    <string name="connector_dgarden_author">Paul Woitaschek</string>
    <string name="connector_dgarden_name">Developergarden</string>

    <string name="connector_dgarden_preferences">Developergarden</string>
    <string name="enable_dgarden">Enable Developergarden</string>

    <string name="client_id">Client ID</string>
    <string name="client_id_hint">Add your Client ID here.</string>
    <string name="password">Security Token</string>
    <string name="password_dgarden_hint">Many digits.</string>

    <string name="custom_sender_use">Use a custom sender</string>
    <string name="custom_sender_use_hint">If unchecked, default sender will be 0191011.</string>
    <string name="custom_sender">Custom number</string>
    <string name="custom_sender_hint">Your registered number (+4917...).</string>

    <string name="error_custom_sender">Enter a valid custom number.</string>
    <string name="sms_free_left"> free SMS left.</string>
    <string name="sms_free_no">No more free SMS left.</string>

    <string name="sandbox"></string>
    <string name="basic"></string>
    <string name="premium"></string>
    <string name="insuff">Not enough credits.</string>
    <string name="choose_env">Environment</string>
    <string name="choose_env_hint">
        Sandbox: 10 SMS Free per day, 129 characters\n
        Basic: 7,1t per SMS, 160 characters\n
        Premium: 8,1ct per 160 characters, 765 characters
    </string>

    <string name="help_text">
        <![CDATA[<p>Diese App ist no standalone-App. To use it you need the App WebSMS. Just do this:</p>
<p>1. <a href=\"https://play.google.com/store/apps/details?id=de.ub0r.android.websms\">Download</a> WebSMS<br>
2. <a href=\"https://www.developergarden.com\">Sign on</a> at Developergarden<br>
3. <a href=\"https://www.developergarden.com/de/mein-konto/api-verwaltung\">Activate</a> GlobalSMS API<br>
4. <a href=\"https://www.developergarden.com/de/mein-konto/applikationsverwaltung\">Create</a> a new App<br>
5. In the config menu of WebSMS at Connectors/Settings you add Client ID and Token, which you find on Developergarden at the config of your new App.</p>
<p>Optional, if you want to use your own number as sender:</p>
1. <a href=\"https://www.developergarden.com/my-account/account-management\">Charge</a> your account with 10ct and add your phonenumber <a href=\"https://www.developergarden.com/de/mein-konto/api-verwaltung/rufnummernverwaltung/?op[action]=configApi\">here</a><br>
2. This number (+4917...) you add in developergarden settings.</p>
        ]]>
    </string>
</resources>
