<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/connector_dgarden_preferences">

    <CheckBoxPreference
        android:key="enable_dgarden"
        android:title="@string/enable_dgarden" />

    <EditTextPreference
        android:dependency="enable_dgarden"
        android:dialogTitle="@string/client_id"
        android:key="client_id"
        android:summary="@string/client_id_hint"
        android:title="@string/client_id" />

    <EditTextPreference
        android:dependency="enable_dgarden"
        android:dialogTitle="@string/password"
        android:inputType="textPassword"
        android:key="token"
        android:summary="@string/password_dgarden_hint"
        android:title="@string/password" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="use_custom_sender"
        android:summary="@string/custom_sender_use_hint"
        android:title="@string/custom_sender_use" />

    <EditTextPreference
        android:dependency="use_custom_sender"
        android:dialogTitle="@string/custom_sender"
        android:inputType="phone"
        android:key="custom_sender"
        android:summary="@string/custom_sender_hint"
        android:title="@string/custom_sender" />

</PreferenceScreen>